# gststitcher

./: .gitignore  README.md
docs/: BUILD.md  README.md  测试指南.md  设计文档.md
gst-stitcher/: .gitignore  meson.build  meson_options.txt
gst-stitcher/calibrate/: calibrate_main.cpp  feature_matcher.cpp  feature_matcher.h  gst_stitcher_mapgen.cpp  homography_solver.cpp  homography_solver.h  json_writer.cpp  json_writer.h  map_generator.cpp  map_generator.h  meson.build
gst-stitcher/demo1/: README.md
gst-stitcher/demo1/2img/: README.md
gst-stitcher/demo1/2img/scripts/: 01_generate_homography.sh  02_generate_map.sh  03_stitch_with_json.sh  04_stitch_with_map.sh  05_perf_comparison.sh  t-inspect-1.0 x264enc
gst-stitcher/demo1/2video/: README.md
gst-stitcher/demo1/2video/scripts/: 01_generate_homography.sh  02_generate_map.sh  03_stitch_with_json.sh  04_stitch_with_map.sh  05_perf_comparison.sh
gst-stitcher/demo1/3img/: README.md
gst-stitcher/demo1/3img/scripts/: 01_generate_homography.sh  02_generate_map.sh  03_stitch_with_json.sh  04_stitch_with_map.sh  05_perf_comparison.sh
gst-stitcher/examples/: README.md
gst-stitcher/examples/scripts/: README.md  generate_homography.sh
gst-stitcher/gst/: gststitcher.c  gststitcher.h  gststitcher.list  gststitcher.map  gststitcherpad.c  gststitcherpad.h  meson.build  plugin.c
gst-stitcher/stitcher/: blend_cpu.c  blender.c  blender.h  canvas.c  canvas.h  homography_config.c  homography_config.h  map_loader.c  map_loader.h  meson.build  stitcher_types.h  warp_backend.h  warp_cpu.c  warp_map.c
gst-stitcher/tests/: meson.build  quick_test.sh  test_plugin_load  test_plugin_load.c
gst-stitcher/tests/data/: download_test_images.sh  homographies_2img.json  homographies_2img_example.json
gst-stitcher/tests/integration/: test_stitcher_2img.sh
gst-stitcher/tests/unit/: test_canvas.c  test_homography_config.c  test_warp_cpu.c
gst-stitcher/tools/: map_info  map_info.c
